# timer

./: .commitlintrc.json  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  PERMISSIONS.md  README.md  RELEASE.md  TODO.testing.md  cliff.toml  renovate.json5
.cargo/: config.toml
.ci/: PKGBUILD-bin.j2  PKGBUILD.j2  demo.sh  generate-pkgbuild.rh  release.sh
.github/: copilot-instructions.md
.github/workflows/: aur-publish.yml  auto-tag.yaml  autotag.yml  commitlint.yml  pre-commit.yml  rust.yml  stale.yml
.opencode/skills/release/: SKILL.md
src/: alert.rs  beep.rs  beep_test.rs  constants.rs  constants_tests.rs  main.rs  opts.rs  stopwatch.rs  time.rs  timer.rs  ui.rs  utils.rs
src/figlet/: mod.rs
src/figlet/snapshots/: timer__figlet__tests__colon_time_pattern.snap  timer__figlet__tests__digit_0.snap  timer__figlet__tests__digit_1.snap  timer__figlet__tests__digit_2.snap  timer__figlet__tests__digit_3.snap  timer__figlet__tests__digit_4.snap  timer__figlet__tests__digit_5.snap  timer__figlet__tests__digit_6.snap  timer__figlet__tests__digit_7.snap  timer__figlet__tests__digit_8.snap  timer__figlet__tests__digit_9.snap  timer__figlet__tests__timer_string.snap
src/snapshots/: timer__time__tests__render_full_size.snap  timer__time__tests__render_medium_size.snap  timer__time__tests__render_small_size.snap
src/sound/: mod.rs
tests/: integration.rs
timer_core/: Cargo.toml
timer_core/src/: beep.rs  constants.rs  figlet.rs  lib.rs  main.rs  opts.rs  time.rs  timer.rs  ui.rs
timer_core/src/figlet/: mod.rs
timer_core/src/sound/: mod.rs
