[package]
name = "timer-cli"
description = "Simple countdown terminal alarm"
authors = ["Pando85 <pando855@gmail.com>"]
version = "0.8.9"
edition = "2024"
license-file = "./LICENSE"
homepage = "https://github.com/pando85/timer"
categories = ["command-line-utilities"]
keywords = ["timer", "pomodoro", "countdown", "cli", "utility"]
repository = "https://github.com/pando85/timer"
readme = "./README.md"

[[bin]]
name = "timer"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["std", "color", "derive", "cargo"] }
crossterm = "0.29"
glob = "0.3"
regex = "1.10"
rodio = { version = "0.20", features = ["vorbis"] }
signal-hook = "0.3"
tailcall = "1.0"
time = { version = "0.3", features = ["formatting", "local-offset", "parsing"] }
# beep
libc = "0.2"
nix = { version = "0.30", features = ["ioctl"] }

[dev-dependencies]
time = { version = "0.3", features = ["macros"] }

[dev-dependencies.cargo-husky]
version = "1.5"
default-features = false  # Disable features which are enabled by default
features = ["user-hooks"]

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"
