[package]
name = "timer_core"
description = "Simple countdown terminal alarm"
authors = ["Pando85 <pando855@gmail.com>"]
version = "0.2.0"
edition = "2021"
license-file = "../LICENSE"
homepage = "https://github.com/pando85/timer"
repository = "https://github.com/pando85/timer"
readme = "../README.md"

[lib]
name = "timer_core"
path = "src/lib.rs"

[[bin]]
name = "timer"
path = "src/bin/timer.rs"

[dependencies]
clap = { version = "3.0.0-rc.1", features = ["std", "color", "derive", "cargo"]}
crossterm = "0.22.1"
glob = "0.3"
regex = "1.5"
rodio = { version = "0.14", features = ["vorbis"]}
signal-hook = "0.3"
time = { version = "0.3.5", features = ["formatting", "local-offset", "parsing"]}

# beep
libc = "0.2"
nix = "0.23"
lazy_static = "1.4"

[dev-dependencies]
time = { version = "0.3.5", features = ["macros"] }

[dev-dependencies.cargo-husky]
version = "1.5"
default-features = false # Disable features which are enabled by default
features = ["user-hooks"]
