[package]
name = "timer_core"
description = "Simple countdown terminal alarm"
authors = ["Pando85 <pando855@gmail.com>"]
version = "0.6.1"
edition = "2021"
license-file = "../LICENSE"
homepage = "https://github.com/pando85/timer"
repository = "https://github.com/pando85/timer"
readme = "../README.md"

[lib]
name = "timer_core"
path = "src/lib.rs"

[[bin]]
name = "timer"
path = "src/bin/timer.rs"

[dependencies]
clap = { version = "4.5", features = ["std", "color", "derive", "cargo"]}
crossterm = "0.27.0"
glob = "0.3"
regex = "1.10"
rodio = { version = "0.17", features = ["vorbis"]}
signal-hook = "0.3"
tailcall = "1.0.1"
time = { version = "0.3.34", features = ["formatting", "local-offset", "parsing"]}
# beep
libc = "0.2"
nix = { version = "0.28", features = ["ioctl"]}
lazy_static = "1.4"

[dev-dependencies]
time = { version = "0.3.34", features = ["macros"] }

[dev-dependencies.cargo-husky]
version = "1.5"
default-features = false # Disable features which are enabled by default
features = ["user-hooks"]
